# bgustreadimg

./: .gitignore  .npmignore  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE  README.md  SKILL.md  build.rs  index.d.ts  index.js  install.sh  package.json  pyproject.toml  test.js
.agents/rules/: docs_reports.md
docs/: README_WASM.md  analysis_and_action_plan.md  implementation_report.md  learning_proposal.md  npm_wasm_packaging_plan.md  updated_multi_platform_plan.md
scripts/: prepare-wasm-pkg.js
src/: bindings_napi.rs  bindings_pyo3.rs  bindings_wasm.rs  layout.rs  lib.rs  ocr.rs
