[package]
name = "bgustreadimg"
version = "0.1.4"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]

[dependencies]
napi = { version = "2.12.0", default-features = false, features = ["async", "napi4"] }
napi-derive = "2.12.0"
image = { version = "0.24.7", default-features = false, features = ["png", "jpeg"] }
sysinfo = "0.29.11"
tokio = { version = "1.28.0", features = ["rt", "rt-multi-thread"] }
ort = "2.0.0-rc.9" # latest pre-release/release that is stable for 2.0
ndarray = "0.15"

[build-dependencies]
napi-build = "2.0.1"
