[package]
name = "bgustreadimg"
version = "0.1.4"
description = "Adaptive image preprocessing engine for OCR — Sauvola binarization, layout detection, and ONNX-based OCR inference"
authors = ["B-GUST"]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/B-GUST/bgustreadimg"
homepage = "https://github.com/B-GUST/bgustreadimg"
keywords = ["ocr", "image-processing", "sauvola", "binarization", "preprocessing"]
categories = ["computer-vision", "multimedia::images"]

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]

[dependencies]
napi = { version = "2.12.0", default-features = false, features = ["async", "napi4"] }
napi-derive = "2.12.0"
image = { version = "0.24.7", default-features = false, features = ["png", "jpeg"] }
sysinfo = "0.29.11"
tokio = { version = "1.28.0", features = ["rt", "rt-multi-thread"] }
ort = "2.0.0-rc.9"
ndarray = "0.15"

[build-dependencies]
napi-build = "2.0.1"
