[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bgustreadimg"
version = "0.1.5"
description = "Adaptive image preprocessing engine for OCR pipelines — Sauvola binarization in O(N) with Rust"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "B-GUST" }
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[tool.maturin]
features = ["python"]
